# 999--

./: .gitignore  .kb_workflow.js  README.md  pyproject.toml  requirements-mlx.txt  requirements.txt  yt  오픈아이오티_회사정의.md  유튜브대본추출.command
brand-studio/: .env.local.example  .gitignore  README.md  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml
대본/: 1000억 자산가들이랑 밥먹는법 (켈리최, 김승호) [D7g_XPHNJeM].txt  4사분면만 이해하세요. 마케팅 고민 끝납니다 [8Cah0XMujQs].txt  5분만에 조회수, 구독자 3배 늘려드릴게요 [IYSInVWSEO8].txt  U-I-S 3단계, 자청의 아이디어 생성법 [EFrsbYTkHkY].txt  돈 버는 사장과 망하는 사장의 결정적 차이 4가지 [56YWH7BMRJ8].txt  돈버는법 강의가 사기일 수 밖에 없는 2가지 이유 (퍼스널브랜딩) [NcrJlWaltxw].txt  마케팅 vs 브랜딩 7분 만에 총정리 [BTBWE-_fDUA].txt  베스트셀러 작가 4가지만 알아두세요(역행자 자청) [J04gxTU5gcg].txt  상위 1% 일잘러만 아는 CHAT GPT [aX7Y4dmvV0s].txt  압구정 의사들이 절대 안 알려주는 2025년 병원마케팅 총정리 [s19V2HIlMUY].txt  역행자 자청의 릴스 초대박내는 공식 3가지 (왕초보 가능) [pZLnT1W73iE].txt  열심히 일해도 망한다 2026년 사업하면 망하는 업종 5가지 [Eapqa00aamI].txt  월 1000 못 벌면, 맡기지 말고 마케팅 교육 하세요 [nCVlm6PxP-8].txt  월1000 역대급 개소리가 퍼져나가는 원리 [JgGc20nxkQ4].txt  이 구별법으로 평생 우려먹으세요(잘되는 사업 vs 망하는 사업) [_I3FMqzeAwI].txt  자신있습니다. 온라인마케팅 2시간만투자하세요 [0w0-KGSJipE].txt  자청이 말하는 온라인 마케팅 대행사의 4가지 문제점 [FEQGg8_jHok].txt  자청이 뷰트랩 써서 조회수 70만 찍기 [nuDtpfXDAVM].txt  제안서 작성법만 알아도, 지금보다 두배는 벌텐데 [QM7FaY_kgig].txt  직원관리, 인사 가스라이팅 이것만 보면 됨 ㅋㅋ [Bnz3npqT00k].txt  초고가 사업컨설팅, 마케팅교육의 진짜 실체 [Q1Vdr_elpOk].txt
마케팅콘텐츠/: 01_인스타_릴스_쇼츠_스크립트.md  02_유튜브_롱폼_대본.md  03_네이버_블로그_글.md  04_광고_랜딩_카피.md  05_openIoT_골프장케이스_유튜브롱폼.md  05_블로그_무인매장_보일러_원격제어.md  06_openIoT_콜드아웃리치_템플릿.md  07_경쟁사_마케팅벤치마크_마케팅베이스렌즈.md  08_3라인_마케팅스케줄_OSMU엔진.md  08_콘텐츠기획_템플릿.md  글천개_추가인사이트.md  (+8 more)
(+86 files in other folders)
